# ---------------------------------------------------------------------------- #
# emDNA cli
#
# Nicolas Clauvelin (n.clauvelin@gmail.com)
#
# ---------------------------------------------------------------------------- #


add_subdirectory(app/)
add_subdirectory(dna_force_field_packager/)
add_subdirectory(forceprobe/)
add_subdirectory(optbinding/)
add_subdirectory(tools/)